cmake_minimum_required(VERSION 3.29)
project(LapTrinhHuongDoiTuong)

set(CMAKE_CXX_STANDARD 20)

add_executable(LapTrinhHuongDoiTuong main.cpp)
add_executable(SinhVien SinhVien.cpp)
add_executable(ThaoTacChuoi ThaoTacChuoi.cpp)
add_executable(LuyenThi LuyenThi.cpp)
add_executable(NhanVien NhanVien.cpp)
add_executable(NhanVien_Contro NhanVien_Contro.cpp)
